--- a/progiseize/css/progiseize.css
+++ b/progiseize/css/progiseize.css
@@ -154,7 +154,57 @@
 #pgsz-option.pgsz-theme-md .noborder tr.titre td {border-left: 1px solid #fff;border-right: 1px solid #fff;border-bottom: none;}
 #pgsz-option.pgsz-theme-md .noborder tr {border-left: none;border-right: none;}
 
-/***/
-/*
 
-*/
+/****************************************************************************************************************/
+/* NEW MODELE AUTRE QUE PGSZ-OPTION */
+/* ticketplus*/
+
+
+#pgsz-dolpage {font-family: 'Poppins',sans-serif;}
+
+#pgsz-dolpage .fw400 {font-weight: 400;}
+#pgsz-dolpage .fw500 {font-weight: 500;}
+#pgsz-dolpage .fw600 {font-weight: 600;}
+#pgsz-dolpage .fw700 {font-weight: 700;}
+#pgsz-dolpage .fw800 {font-weight: 800;}
+#pgsz-dolpage .fw900 {font-weight: 900;}
+
+#pgsz-dolpage .pgsz-twolines-ellipsis {display: -webkit-box;-webkit-line-clamp: 2; -webkit-box-orient: vertical; line-clamp: 2;overflow: hidden; text-overflow: ellipsis;}
+
+/* HEADER */
+#pgsz-dolpage #pgsz-wrap-header {margin-bottom: 24px;}
+#pgsz-dolpage #pgsz-wrap-header h1.pgsz-page-title {color: var(--main-bg-dark);padding: 0;margin: 0;font-size: 21px;font-weight: 700;padding-top: 16px; text-transform: uppercase;}
+#pgsz-dolpage #pgsz-wrap-header h1.pgsz-page-title::before {display: inline-block;content: "";height: 18px;width: 3px;background: var(--main-colorful-color);margin-bottom: -1px;margin-right: 12px;}
+#pgsz-dolpage #pgsz-wrap-header .pgsz-page-description {color: var(--main-medium-grey);margin-top: 3px;}
+#pgsz-dolpage #pgsz-wrap-header .pgsz-page-description .fa-info-circle {margin-left: 0;padding-left: 0;}
+
+#pgsz-dolpage #pgsz-wrap-content {}
+#pgsz-dolpage #pgsz-wrap-content {}
+
+#pgsz-dolpage .pgsz-table {font-family: 'Poppins',sans-serif;border-collapse: collapse !important;border-top: none;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-labels th {font-family: 'Poppins',sans-serif;color: var(--main-bg-dark);font-weight: 600;background: var(--main-bg-lightgrey);border-top: 1px solid #e0e0e0 !important;border-bottom: 1px solid var(--main-bg-dark);padding-top: 12px;padding-bottom: 12px;white-space: nowrap;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-labels th i {margin-right: 3px;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-tr td {font-family: 'Poppins',sans-serif;padding: 10px 8px;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-tr td.pgsz-tab-main {color: var(--main-bg-dark);font-weight: 500;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-tr td.pgsz-tab-txt {color: var(--main-dark-grey);}
+
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-tr.tabw {background: #fff;}
+#pgsz-dolpage .pgsz-table tr.pgsz-tab-tr.tabw td {padding: 10px 0;}
+
+/* FLEX ELEMENTS */
+#pgsz-dolpage .pgsz-flex-wrap {display: flex;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col {box-sizing: border-box;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-10 {width: 10%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-20 {width: 20%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-30 {width: 30%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-40 {width: 40%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-50 {width: 50%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-60 {width: 60%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-70 {width: 70%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-80 {width: 80%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-90 {width: 90%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-100 {width: 100%;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-exp {flex: 1;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-w640 {width: 640px;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-left {padding-right: 15px;}
+#pgsz-dolpage .pgsz-flex-wrap .pgsz-col.col-right {padding-left: 15px;}
